--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,6 @@ table {
 .container {
     width: 960px;
     height: 960px;
-
     display: grid;
     margin: auto;
 
@@ -64,14 +63,11 @@ table {
 border: 1px black solid;
 }
 
-.gridSquareHover {
-    transition:0s;
-
-    background-color: black;
+/* .gridSquareHover {
 }
 
 .gridSquareReset {
     transition: 0.5s;
     transition-delay:3s;
     background-color: rgb(0,0,0,0);
-}
+} */
