--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+    font-family: Arial, Helvetica, sans-serif;
 }
 ol, ul {
 	list-style: none;
@@ -50,7 +51,43 @@ table {
 
 
 
+h1 {
+    font-size: 5rem;
+    margin-bottom: 16px;
+}
 
+
+
+.section {
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+margin-bottom: 64px;
+padding: 16px;
+}
+
+.header {
+margin-top: 64px;
+text-align: center;
+}
+
+.button {
+    margin-top: 16px;
+    padding: 16px 64px;
+background-color: darkseagreen;
+color: black;
+border: 1px black solid;
+margin: auto;
+font-size: 1rem;
+}
+
+.button:hover {
+
+    background-color: black;
+    color: darkseagreen;
+    border-color: darkseagreen;
+}
 .container {
     width: 960px;
     height: 960px;
